# chem-spectra-app

./: .devcontainer.json  .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.p2d  INSTALL.md  INSTALL_BASIC.md  LICENSE  README.md  dependencies.list  docker-compose.p2d.yml  environment.yml  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py
.devcontainer/: Dockerfile.devcontainer  devcontainer.json
.github/workflows/: unit_test.yml
chem_spectra/: __init__.py  controller.py  pick.py  settings.py
chem_spectra/controller/: api.py  file_api.py  helper.py  inference_api.py  refresh_token_api.py  spectra_layout_api.py  transform_api.py
chem_spectra/controller/helper/: file_container.py  lcms.py  lcms_response.py  share.py
chem_spectra/lib/: predict.py  process.py
chem_spectra/lib/chem/: artist.py  ifg.py
chem_spectra/lib/composer/: base.py  integration_extras.py  integration_utils.py  lcms.py  lcms_converter_app.py  ms.py  ms_fix.py  ni.py
chem_spectra/lib/converter/: datatable.py  ms.py  share.py
chem_spectra/lib/data_pipeline/: infrared.py
chem_spectra/lib/ms/: ms_composer.py  raw_converter.py
chem_spectra/lib/shared/: buffer.py  calc.py  equal_space.py  reduce_pts.py
chem_spectra/lib/spectra/: carrier.py  encoder.py  helper.py  peaker.py  writer.py
chem_spectra/model/: artist.py  inferencer.py  infrared.py  molecule.py  predict.py  process.py  transformer.py
chem_spectra/model/composer/: base.py  ms.py  ni.py  nmr_ir.py
chem_spectra/model/concern/: property.py
chem_spectra/model/converter/: chem.py  ms.py  ms_raw.py  nmr_ir.py  raw.py
chem_spectra/model/helper/: share.py
docs/: ARCHITECTURE.md  CENTRAL_DATASET_MIGRATION_REPORT.md  SUBMODULE_INTEGRATION_REPORT.md  api-reference.md  architecture.md  core-flows.md  onboarding.md
docs/dev/: diagrams.md
docs/diagrams/: backend_components.plantuml  generate.sh  over_view_structure.plantuml
docs/diagrams/src/: architecture-layers.mmd  backend-layers-technical.mmd  controller-endpoint-map.mmd  file-api-runtime-flow.mmd  internal-conversion-flow.mmd  ir-prediction-flow.mmd  ms-prediction-flow.mmd  nmr-prediction-flow.mmd  request-flow.mmd  system-overview.mmd  transform-output-flow.mmd  transformer-decision-flow.mmd  zip-processing-flow.mmd
tests/: conftest.py  dataset_catalog.py  test_bagit.py  test_controller.py  test_cyclic_volta.py  test_examples.py  test_func.py  test_ms.py  test_pick.py  test_spectra.py  test_spectra_datatable.py  test_spectra_im.py  test_spectra_im_hplc.py  test_spectra_peaks.py  test_xrd.py
tests/controller/: test_file_api.py  test_inference_api.py  test_ping.py  test_refresh_token_api.py  test_spectra_layout_api.py  test_transform_api.py
tests/controller/helper/: test_settings.py
tests/fixtures/: IR.dx  mock_predict.py  mock_predict_ir.py  mock_predict_nmr.py  test_data_types.json
tests/lib/: test_composer.py
tests/model/: test_transformer.py
(+127 files in other folders)
